@@ -2,6 +2,9 @@ Mon Dec  6 11:58:12 CET 2004 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/cad/occ/OCCShapeBuilder.java:  Read .step files.
 
+	* src/org/jcae/mesh/cad/CADGeomCurve2D.java
+	  src/org/jcae/mesh/cad/occ/OCCGeomCurve2D.java:  New getRange() method.
+
 Fri Nov 26 15:45:37 CET 2004 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos2d/Insertion.java:  Curve length do not have to be very precise, so compute less intermediate nodes.
